syntax = "proto3";

option java_multiple_files = true;

package mmn.pro3kursusopgave;

message DTOAnimal {
  int32 animalNo = 1;
  double weight = 2;
  string typeOfAnimal = 3;
  string origin = 4;
  int64 dateTime = 5;
}

message DTOAnimalPart {
  int32 trayNo = 1;
  DTOAnimal from = 2;
  double weight = 3;
  string typeOfPart = 4;
  int64 cuttingDate = 5;
  int32 partId = 6;
}

message DTOTray
{
  int32 trayNo = 1;
  double maxWeight = 2;
  string typeOfPart = 3;
  repeated DTOAnimalPart parts = 4;
}

message DTOPackage
{
  int32 packageNo = 1;
  int64 expire_date = 2;
  repeated DTOTray trays = 3;
}

message Empty
{

}